--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Welcome to my website!</title>
     </head>
     <body>
+        <header>
+            <h1>Welcom to my website!</h1>
+        </header>
         <a href="resume/wa.html">Link to resume</a>
     </body>
 </html>
