--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>Welcom to my website!</h1>
+            <h1>Welcome to my website!</h1>
         </header>
         <a href="resume/wa.html">Link to resume</a>
     </body>
