Change indentation to remove tabs and add paragraph describing the website.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Welcome to my website!</title>
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to my website!</h1>
-        </header>
-        <a href="resume/wa.html">Link to resume</a>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Home | My Website</title>
+  </head>
+  <body>
+    <header>
+      <h1>My website</h1>
+      <nav>
+        <a href="/website_2021/resume/">Resume</a>
+        <a href="/website_2021/pictures/">Epic Pictures</a>
+      </nav>
+    </header>
+    <main>
+      <p>The greatest website ever.</p>
+    </main>
+    <footer>
+      <p>Copyright Boston Elkins 2021</p>
+    </footer>
+  </body>
 </html>
