Push project for first time

--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <title>Home | My Website</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
-      <h1>My website</h1>
-      <nav>
-        <a href="/website_2021/resume/">Resume</a>
-        <a href="/website_2021/pictures/">Epic Pictures</a>
+      <h1 class="home-heading">My website</h1>
+      <nav class="navigation">
+        <a href="/resume/">Resume</a>
+        <a href="/pictures/">Epic Pictures</a>
       </nav>
     </header>
-    <main>
-      <p>The greatest website ever.</p>
+    <main class="main">
+      <ul class="grid-container">
+        <li>The greatest</p>
+        <li>website</p> 
+        <li>ever.</p>
+      </ul>
     </main>
-    <footer>
+    <footer class="copyright">
       <p>Copyright Boston Elkins 2021</p>
     </footer>
   </body>
