--- a/pictures/index.html
+++ b/pictures/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Epic Pictures | My Websites</title>
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <header>
       <h1>Cool pics</h1>
       <nav>
-        <a href="/website_2021/">Home</a>
-        <a href="/website_2021/resume/">Resume</a>
+        <a href="/">Home</a>
+        <a href="/resume/">Resume</a>
       </nav>
     </header>
     <main>
