Attempt to fix 404 error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <h1 class="home-heading">My website</h1>
       <nav class="navigation">
-        <a href="/resume/">Resume</a>
+        <a href="/website-css-2021/resume/">Resume</a>
         <a href="/pictures/">Epic Pictures</a>
       </nav>
     </header>
