Attempt to fix 404 error

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Home | My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/website-css-2021/styles.css">
   </head>
   <body>
     <header>
       <h1 class="home-heading">My website</h1>
       <nav class="navigation">
-        <a href="./resume/">Resume</a>
+        <a href="/website-css-2021/resume/">Resume</a>
         <a href="/pictures/">Epic Pictures</a>
       </nav>
     </header>
