Edit file paths to hopefully resolve navigational errors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1 class="home-heading">My website</h1>
       <nav class="navigation">
         <a href="/website-css-2021/resume/">Resume</a>
-        <a href="/pictures/">Epic Pictures</a>
+        <a href="/website-css-2021/pictures/">Epic Pictures</a>
       </nav>
     </header>
     <main class="main">
