--- a/resume/index.html
+++ b/resume/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Resume | My Website</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/website-css-2021/styles.css">
   </head>
   <body>
     <header id="header">
       <h1>Resume</h1>
       <nav class="navigation">
-        <a href="/">Home</a>
-        <a href="/pictures/">Epic Pictures</a>
+        <a href="/website-css-2021/">Home</a>
+        <a href="/website-css-2021/pictures/">Epic Pictures</a>
       </nav>
     </header>
     <main class="h-resume" id="content">
