Edit file paths to hopefully resolve naigational errors

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,8 +9,8 @@
     <header id="header">
       <h1>Resume</h1>
       <nav class="navigation">
-        <a href="/">Home</a>
-        <a href="/website-css-2021/pictures/">Epic Pictures</a>
+        <a href="../">Home</a>
+        <a href="../pictures/">Epic Pictures</a>
       </nav>
     </header>
     <main class="h-resume" id="content">
