Edit file paths to hopefully resolve naigational errors

--- a/pictures/index.html
+++ b/pictures/index.html
@@ -17,19 +17,19 @@
       <p>Here is a number of things I've made.</p>
       <ul>
         <li>
-          <img src="/assets/Duck.png" alt="A cool Duck" />
+          <img src="../assets/Duck.png" alt="A cool Duck" />
         </li>
         <li>
-          <img src="/assets/CassetteRetroism.png" alt="Cool CRT" />
+          <img src="../assets/CassetteRetroism.png" alt="Cool CRT" />
         </li>
         <li>
-          <img src="/assets/trees.png" alt="Cool trees" />
+          <img src="../assets/trees.png" alt="Cool trees" />
         </li>
         <li>
-          <img src="/assets/1bitsketch.png" alt="cool 1bit" />
+          <img src="../assets/1bitsketch.png" alt="cool 1bit" />
         </li>
         <li>
-          <img src="/assets/character.png" alt="Cool character" />
+          <img src="../assets/character.png" alt="Cool character" />
         </li>
       </ul>
     </main>
