Create stable baseline typographic grid layout

--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="g">
   <head>
     <meta charset="utf-8" />
     <title>Home | My Website</title>
-    <link rel="stylesheet" href="/website-css-2021/styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <header>
-      <h1 class="home-heading">My website</h1>
+      <h1 class="home-heading">My Website</h1>
       <nav class="navigation">
-        <a href="/website-css-2021/resume/">Resume</a>
-        <a href="/website-css-2021/pictures/">Epic Pictures</a>
+        <a href="./">Home</a>
+        <a href="./resume/">Resume</a>
+        <a href="./pictures/">Pictures</a>
       </nav>
+      <ul class="embellishment-container">
+        <li>The greatest</li>
+        <li>website</li> 
+        <li>ever.</li>
+      </ul>
     </header>
     <main class="main">
-      <ul class="grid-container">
-        <li>The greatest</p>
-        <li>website</p> 
-        <li>ever.</p>
-      </ul>
+      <p>
+        This is the paragraph that explains what this website is about. Because this website doesn't represent a body in need of the advertisement (company, 
+        organization, event, etc.), this paragraph only serves to to fill space and provide more visual stimulus. This is the only purpose it serves. It does not 
+        give any insight into the content of the website or what it represents. And why should it? It is not required to do so. There exists no objective of this 
+        assignment to create a paragraph detailing the content of your website or what it represents. It should be noted that there is no real aggression in this 
+        writing. What has been said is merely to take up space, of which I feel it has succeeded. This only gives further credance to the fact this paragraph is 
+        useless and should not be read by anybody. Seriously, why are you still reading this? Have I not made it clear how pointless this endeavor is? Why did you 
+        read that sentence still? You should revaluate how you spend your time. For your own good I'm going to demand you stop reading now. Stop reading. I said 
+        stop! reading. Stop. Stop it. I said stop! Persistent aren't we. So be it, I suppose I will just have to stop you by giving you nothing else to read. You 
+        could have just quit earlier and I saved us both the time. Oh well, here I go. I will stop writing now. You're still here!? Ok fine, I'm stopping now. Now. Ok, 
+        last time; now! Now! Stopping now. I mean it this time. Now! Fine... you win. Do you feel good about yourself? Wasting both of our time.
+      </p>
     </main>
     <footer class="copyright">
       <p>Copyright Boston Elkins 2021</p>
