--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="g">
   <head>
     <meta charset="utf-8" />
     <title>Resume | My Website</title>
@@ -7,10 +7,11 @@
   </head>
   <body>
     <header id="header">
-      <h1>Resume</h1>
+      <h1>My Website</h1>
       <nav class="navigation">
         <a href="../">Home</a>
-        <a href="../pictures/">Epic Pictures</a>
+        <a href="../resume/">Resume</a>
+        <a href="../pictures/">Pictures</a>
       </nav>
     </header>
     <main class="h-resume" id="content">
@@ -43,17 +44,17 @@
         </section>
         <section id="education">
           <h3>Education</h3>
-          <ol class="p-education grid-container">
+          <ol class="p-education grid-container section-content-container bulleted-list">
             <li>
               <ul class="h-card">
                 <li class="p-name">Illinois Institute of Technology</li>
-                <li class="h-event">August 2021 - Present</li>
+                <li class="h-event term">August 2021 - Present</li>
               </ul>
             </li>
             <li>
               <ul class="h-card">
                 <li class="p-name">Calhoun Area Career Center</li>
-                <li class="h-event">September 2019 - May 2021</li>
+                <li class="h-event term">September 2019 - May 2021</li>
                 <li>Computer Networking Course</li>
                 <li>Learned many fundamentals of the IT industry</li>
               </ul>
@@ -61,14 +62,14 @@
             <li>
               <ul class="h-card">
                 <li class="p-name">Union City High School</li>
-                <li class="h-event">Semptember 2017 - May 2021</li>
+                <li class="h-event term">Semptember 2017 - May 2021</li>
               </ul>
             </li>
           </ol>
         </section>
         <section id="volunteer-work">
           <h3>Volunteer Work</h3>
-          <ol class="p-experience grid-container">
+          <ol class="p-experience grid-container section-content-container bulleted-list">
             <li class="h-card">
               <ul>
                 <li class="p-name">National Honors Society</li>
@@ -83,7 +84,7 @@
         </section>
         <section id="work">
           <h3>Work Experience</h3>
-          <ol class="p-experience grid-container">
+          <ol class="p-experience grid-container section-content-container bulleted-list">
             <li class="h-card">
               <ul>
                 <li class="p-name">Galvin Library</li>
@@ -95,7 +96,7 @@
         </section>
         <section id="skills">
           <h3>Additional Skills and Certifications</h3>
-          <ul class="p-skill grid-container">
+          <ul class="p-skill grid-container section-content-container">
             <li>TestOut PcPro Certified</li>
             <li>Gets along well with</li>
             <li>Dedicated worker</li>
@@ -107,7 +108,7 @@
         </section>
         <section>
           <h3>References</h3>
-          <ul class="h-card grid-container">
+          <ul class="h-card grid-container references">
             <li>
               <ul>
                 <li class="p-name">Teacher</li>
