--- a/pictures/index.html
+++ b/pictures/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <header>
-      <h1>Cool pics</h1>
-      <nav>
+      <h1>My Website</h1>
+      <nav class="navigation">
         <a href="../">Home</a>
         <a href="../resume/">Resume</a>
+        <a href="../pictures/">Pictures</a>
       </nav>
     </header>
     <main>
