Create stable responsive design layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </header>
     <main class="main">
-      <p>
+      <p id="useless-paragraph">
         This is the paragraph that explains what this website is about. Because this website doesn't represent a body in need of the advertisement (company, 
         organization, event, etc.), this paragraph only serves to to fill space and provide more visual stimulus. This is the only purpose it serves. It does not 
         give any insight into the content of the website or what it represents. And why should it? It is not required to do so. There exists no objective of this 
