--- a/pictures/index.html
+++ b/pictures/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <p>Here is a number of things I've made.</p>
-      <ul>
+      <ul class="picture-container">
         <li>
           <img src="../assets/Duck.png" alt="A cool Duck" />
         </li>
