--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@
       <article class="h-card" id="resume">
         <header>
           <h2 class="p-name" id="resume-heading">Boston Elkins</h2>
-          <ul class="p-contact grid-container" id="contact">
+          <ul class="p-contact grid-container color" id="contact">
             <li>
               <a class="p-tel" id="phonenumber" href="tel:+1-555-555-5555"
                 >(555) 555-0199</a
@@ -44,7 +44,7 @@
         </section>
         <section id="education">
           <h3>Education</h3>
-          <ol class="p-education grid-container section-content-container bulleted-list">
+          <ol class="p-education grid-container section-content-container bulleted-list color">
             <li>
               <ul class="h-card">
                 <li class="p-name">Illinois Institute of Technology</li>
@@ -69,7 +69,7 @@
         </section>
         <section id="volunteer-work">
           <h3>Volunteer Work</h3>
-          <ol class="p-experience grid-container section-content-container bulleted-list">
+          <ol class="p-experience grid-container section-content-container bulleted-list color">
             <li class="h-card">
               <ul>
                 <li class="p-name">National Honors Society</li>
@@ -84,7 +84,7 @@
         </section>
         <section id="work">
           <h3>Work Experience</h3>
-          <ol class="p-experience grid-container section-content-container bulleted-list">
+          <ol class="p-experience grid-container section-content-container bulleted-list color">
             <li class="h-card">
               <ul>
                 <li class="p-name">Galvin Library</li>
@@ -96,7 +96,7 @@
         </section>
         <section id="skills">
           <h3>Additional Skills and Certifications</h3>
-          <ul class="p-skill grid-container section-content-container">
+          <ul class="p-skill section-content-container bulleted-list color"">
             <li>TestOut PcPro Certified</li>
             <li>Gets along well with</li>
             <li>Dedicated worker</li>
