Add ul element to nav element

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <header>
       <h1 class="home-heading">My Website</h1>
       <nav class="navigation">
-        <a href="./">Home</a>
-        <a href="./resume/">Resume</a>
-        <a href="./pictures/">Pictures</a>
+        <ul>
+          <a href="./">Home</a>
+          <a href="./resume/">Resume</a>
+          <a href="./pictures/">Pictures</a>
+        </ul>
       </nav>
       <ul class="embellishment-container">
-        <li>The greatest</li>
-        <li>website</li> 
-        <li>ever.</li>
+        <li id="emb01">The greatest</li>
+        <li id="emb02">website</li> 
+        <li id="emb03">ever.</li>
       </ul>
     </header>
     <main class="main">
